# shuriken

./: .gitmodules  CMakeLists.txt  NOTICE  README.md  fs_usage.c  fs_usage.cpp  libutil.h  syscall_constants.h  syscall_tables.h  sysctl_helpers.h  todo.txt
src/rs/: CMakeLists.txt  README.md
src/rs-grpc/: CMakeLists.txt  README.md
src/rs-grpc/src/: rs_grpc_tag.cpp  service.cpp
src/rs-grpc/test/: bidi_streaming_test.cpp  client_streaming_test.cpp  grpc_error_test.cpp  main.cpp  proto_test.cpp  rs_grpc_tag_test.cpp  rs_grpc_test.cpp  rsgrpctest.fbs  rsgrpctest.proto  server_streaming_test.cpp  subscriber_test.cpp  subscription_test.cpp  test_util.cpp  test_util.h  unary_test.cpp
src/rs/doc/: custom_operators.md  reference.md  specification.md
src/rs/src/: catch.cpp  subscriber.cpp  subscription.cpp
src/rs/test/: all_test.cpp  append_test.cpp  average_test.cpp  backpressure_violator.h  backreference_test.cpp  catch_test.cpp  concat_map_test.cpp  concat_test.cpp  contains_test.cpp  count_test.cpp  default_if_empty_test.cpp  element_at_test.cpp  element_count_test.cpp  empty_test.cpp  end_with_test.cpp  error_test.cpp  filter_test.cpp  first_test.cpp  flat_map_test.cpp  from_test.cpp  if_empty_test.cpp  infinite_range.h  is_empty_test.cpp  iterate_test.cpp  just_test.cpp  last_test.cpp  map_test.cpp  max_test.cpp  merge_test.cpp  min_test.cpp  never_test.cpp  pipe_test.cpp  prepend_test.cpp  publisher_test.cpp  range_test.cpp  reduce_test.cpp  repeat_test.cpp  scan_test.cpp  skip_test.cpp  skip_while_test.cpp  (+14 more)
src/rx/: CMakeLists.txt  README.md
src/rx/src/: subscription.cpp
src/rx/test/: count_test.cpp  empty_test.cpp  error_test.cpp  get.h  iterate_test.cpp  just_test.cpp  map_test.cpp  publisher_test.cpp  reduce_test.cpp  sum_test.cpp  test_util.h
src/shk/: CMakeLists.txt
src/shk-cache/: CMakeLists.txt  README.md
src/shk-cache/api/: shkcache.proto
src/shk-cache/src/: grpc_error.h  rx_grpc.h  rx_grpc_flatbuffers.h  rx_grpc_identity_transform.h  rx_grpc_reader.h  rx_grpc_tag.h  rx_grpc_writer.h  shk-cache.cpp  stream_traits.h
src/shk-cache/test/: rx_grpc_test.cpp  rxgrpctest.fbs
src/shk-index/: CMakeLists.txt  README.md
src/shk-index/api/: shkindex.proto
src/shk-index/src/: shk-index.cpp
src/shk-store/: CMakeLists.txt  README.md
src/shk-store/api/: shkstore.proto
src/shk-store/src/: constants.h  internal.proto  protobuf_container.h  reduce_multiple.h  shk-store.cpp  store_server.cpp  store_server.h
src/shk-trace/: CMakeLists.txt  limitations.txt
src/shk-trace/integrationtest/: test.cpp  test.py
src/shk-trace/src/: apsl_code.cpp  apsl_code.h  cmdline_options.cpp  cmdline_options.h  cwd_memo.cpp  cwd_memo.h  daemon.cpp  daemon.h  debug_capture_log.cpp  debug_capture_log.fbs  debug_capture_log.h  dispatch.h  event.cpp  event.h  event_consolidator.cpp  event_consolidator.h  event_info.cpp  event_info.h  event_info_map.cpp  event_info_map.h  event_type.h  file_descriptor.cpp  file_descriptor.h  file_descriptor_memo.cpp  file_descriptor_memo.h  fileport.h  kdebug_controller.cpp  kdebug_controller.h  kdebug_pump.cpp  kdebug_pump.h  mach_port.cpp  mach_port.h  main.cpp  named_mach_port.cpp  named_mach_port.h  path_resolver.cpp  path_resolver.h  process_tracer.cpp  process_tracer.h  socket.h  (+13 more)
src/shk-trace/test/: cmdline_options_test.cpp  cwd_memo_test.cpp  debug_capture_log_test.cpp  event_consolidator_test.cpp  event_info_map_test.cpp  event_info_test.cpp  event_test.cpp  file_descriptor_memo_test.cpp  mach_port_test.cpp  mock_tracer_delegate.h  named_mach_port_test.cpp  path_resolver_test.cpp  process_tracer_test.cpp  socket_test.cpp  to_json_test.cpp  trace_writer_test.cpp  tracer_test.cpp  tracing_server_test.cpp
src/shk-util/: CMakeLists.txt  README.md
src/shk-util/src/: assert.cpp  path_operations.cpp  shktrace.fbs
src/shk-util/test/: path_operations_test.cpp  shktrace_test.cpp
src/shk/integrationtest/: test.py
src/shk/src/: build.cpp  build.h  build_config.h  build_error.h  cleaning_file_system.cpp  cleaning_file_system.h  clock.h  dependency_type.h  dry_run_command_runner.cpp  dry_run_file_system.cpp  dry_run_file_system.h  dry_run_invocation_log.h  dummy_invocation_log.h  edit_distance.cpp  edit_distance.h  eval_env.cpp  eval_env.h  eval_string.cpp  exit_status.h  file_id.h  file_lock.cpp  file_lock.h  hash.h  indexed_manifest.cpp  indexed_manifest.h  invocation_log.h  invocations.h  io_error.cpp  io_error.h  lexer.in.cpp  line_printer.cpp  manifest.h  nullterminated_string.h  optional.h  parse_error.h  path.cpp  path.h  path_error.h  persistent_file_system.cpp  persistent_invocation_log.cpp  (+16 more)
src/shk/test/: build_test.cpp  cleaning_file_system_test.cpp  delayed_invocation_log_test.cpp  dry_run_file_system_test.cpp  dummy_build_status.h  dummy_command_runner.cpp  dummy_command_runner.h  dummy_command_runner_test.cpp  edit_distance_test.cpp  file_lock_test.cpp  file_system_test.cpp  fingerprint_test.cpp  generators.h  in_memory_file_system.cpp  in_memory_file_system.h  in_memory_file_system_test.cpp  in_memory_invocation_log.cpp  in_memory_invocation_log.h  in_memory_invocation_log_test.cpp  indexed_manifest_test.cpp  io_error_test.cpp  line_printer_test.cpp  nullterminated_string_test.cpp  optional_test.cpp  path_test.cpp  persistent_file_system_test.cpp  persistent_invocation_log_test.cpp  properties.cpp  raii_helper_test.cpp  real_command_runner_test.cpp  sandbox_parser_test.cpp  step_test.cpp  stopwatch_test.cpp  string_view_test.cpp  tracing_command_runner_test.cpp  util_test.cpp
src/shkutil/: CMakeLists.txt
src/shkutil/src/: file_descriptor.cpp  shktrace.fbs
src/shkutil/test/: assert_test.cpp  raii_helper_test.cpp  shktrace_test.cpp  string_view_test.cpp
src/traceexec/: CMakeLists.txt  README.md  dev.txt
src/traceexec/kext/: CMakeLists.txt  Info.plist  policy.h  traceexec.c  traceexec_cmds.h  traceexec_info.c
src/traceexec/lib/: traceexec.cpp  traceexec.h  version.cpp  version.h
src/traceexec/test/: main.cpp  version_test.cpp
src/util/: CMakeLists.txt  README.md
src/util/test/: raii_helper_test.cpp
(+383 files in other folders)
